<resources>
    <string name="app_name">Library App</string>
    <string name="library_app"><b>Library</b> App</string>
    <string name="library_app_login">Quản lý thư viện</string>
    <string name="login"><b>Đăng nhập</b></string>
    <string name="logout">Đăng xuất</string>
    <string name="register"><b>Đăng ký</b></string>
    <string name="ho_ten">HỌ VÀ TÊN</string>
    <string name="your_name">Your name</string>
    <string name="email">EMAIL</string>
    <string name="your_mail">yourmail@gmail.com</string>
    <string name="pass">MẬT KHẨU</string>
    <string name="hint_pass">********</string>
    <string name="quen_pass">Quên mật khẩu?</string>
    <string name="no_account"><font color="#999999">Chưa có tài khoản?</font> <b><font color="#4356B4">Đăng ký ngay</font></b></string>
    <string name="yes_account"><font color="#999999">Đã có tài khoản?</font> <b><font color="#4356B4">Đăng nhập ngay</font></b></string>
    <string name="policy_rules"><font color="#999999">Tôi đồng ý với các </font><b><font color="#4356B4">chính sách</font></b><font color="#999999"> và </font><b><font color="#4356B4">điều khoản</font></b></string>
    <string name="notification">Thông báo</string>
    <string name="cancel">Hủy</string>
    <string name="load_data">Đang tải dữ liệu...</string>
    <string name="error_email">Email không hợp lệ!</string>
    <string name="error_pass">Mật khẩu không hợp lệ!\nMật khẩu phải có:\n Độ dài tối thiểu 8 ký tự\n Chữ cái thường (a-z)\n Chữ cái hoa (A-Z)\n Chữ số (0-9)</string>
    <string name="regis_failed">Mail đăng ký đã được sử dụng!</string>
    <string name="incorrect">Email hoặc Mật khẩu không chính xác!</string>
    <string name="book">Sách</string>
    <string name="borrow_give">Quản lý phiếu mượn</string>
    <string name="info">Trang cá nhân</string>
    <string name="search_book">Tìm kiếm sách ...</string>
    <string name="search_borrow">Tìm kiếm phiếu mượn ...</string>
    <string name="search_off_book">Không tìm thấy kết quả phù hợp</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_current">Tiếng Việt</string>
    <string name="version">Phiên bản ứng dụng</string>
    <string name="app_version">1.0.0</string>
    <string name="trend">Thống kê</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="save">Lưu</string>
    <string name="num_phone">SỐ ĐIỆN THOẠI</string>
    <string name="birthday">NGÀY SINH</string>
    <string name="update_data">Đang cập nhật dữ liệu...</string>
    <string name="update_error">Lỗi cập nhật dữ liệu</string>
    <string name="name_blank">Vui lòng nhập họ tên!</string>
    <string name="phone_blank">Vui lòng nhập số điện thoại!</string>
    <string name="birthday_blank">Vui lòng nhập ngày tháng năm sinh!</string>
    <string name="add_book">Quản lý đầu sách</string>
    <string name="id_book">Mã sách: </string>
    <string name="name_book">Tên sách: </string>
    <string name="author">Tác giả: </string>
    <string name="producer">Nhà xuất bản: </string>
    <string name="year">Năm xuất bản: </string>
    <string name="category">Chuyên ngành/Thể loại: </string>
    <string name="describe">Mô tả: </string>
    <string name="add_phieu">Tạo phiếu mượn</string>
    <string name="id_sv">Mã sinh viên: </string>
    <string name="hoten">Họ và tên: </string>
    <string name="ngay_sinh">Ngày sinh: </string>
    <string name="lop">Lớp: </string>
    <string name="date_create">Ngày mượn: </string>
    <string name="date_return">Ngày hẹn trả: </string>
    <string name="book_blank">Vui lòng nhập đủ thông tin sách!</string>
    <string name="studentID_blank">Vui lòng nhập mã sinh viên!</string>
    <string name="bookID_blank">Vui lòng nhập mã sách!</string>
    <string name="bookID_error">Mã sách không đúng!</string>
    <string name="ok">OK</string>
    <string name="them_sach">   Thêm sách</string>
    <string name="sach_muon">Sách mượn: </string>
    <string name="dang_muon">Đang mượn</string>
    <string name="da_tra">Đã trả</string>
    <string name="phieu_muon">Phiếu đang mượn: </string>
    <string name="studentID_error">Mã sinh viên không đúng!</string>
    <string name="da_co_sach"> đã được thêm vào danh sách!</string>
    <string name="cuon"> cuốn</string>
    <string name="xoa">Bạn có muốn xóa </string>
    <string name="xoa1"> khỏi phiếu mượn không?</string>
    <string name="dong_y">Đồng ý</string>
    <string name="tt_sv">Vui lòng nhập đủ thông tin sinh viên!</string>
    <string name="not_date_return">Chưa chọn ngày trả dự kiến</string>
    <string name="not_date_vald">Ngày phải có định dạng dd/MM/yyyy</string>
    <string name="date_error">Ngày không hợp lệ!</string>
    <string name="date_return_error">Ngày trả dự kiến phải lớn hơn ngày tạo</string>
    <string name="not_book">Chưa chọn sách mượn</string>
    <string name="ngay_muon">Ngày mượn:</string>
    <string name="chi_tiet_phieu">Chi tiết phiếu mượn</string>
    <string name="tra_phieu">Trả phiếu</string>
    <string name="xn_tra_phieu">Xác nhận trả phiếu mượn?</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="ngay_tra">Ngày trả:</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>

</resources>